syntax = "proto3";

option go_package = "github.com/bjarke-xyz/auth/internal/auth";

import "google/protobuf/any.proto";

package auth;

service Auth {
    rpc ValidateToken(ValidateTokenRequest) returns (AuthToken) {}
}

message AuthToken {
    double authTime = 1;
    string issuer = 2;
    string audience = 3;
    double expires = 4;
    double issuedAt = 5;
    string subject = 6;
    string UID = 7;
    map<string, google.protobuf.Any> claims = 8;
}

message ValidateTokenRequest {
    string token = 1;
    string audience = 2;
}